--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                         <li><a href="">Blog</a></li>
                     </ul>
 
-                    <p>Showrooms</p>
+                    <p class="footerAboutText1">Showrooms</p>
 
                     <ul class="footerUlTwo">
                         <li><a href="">New York</a></li>
@@ -239,7 +239,7 @@
                 <div class="footerSupport">
                     <p>Support</p>
 
-                    <ul>
+                    <ul class="footerUlThree">
                         <li><a href="">FAQ</a></li>
                         <li><a href="">Booth Assembly</a></li>
                         <li><a href="">Delivery</a></li>
@@ -250,9 +250,9 @@
                         <li><a href="">Copyright</a></li>
                     </ul>
 
-                    <p>Office</p>
+                    <p class="footerSupportText1">Office</p>
 
-                    <span>599 Broadway, FL 9 <br> New York, NY 10012</span>
+                    <span class="footerSupportSpan">599 Broadway, FL 9 <br> New York, NY 10012</span>
                 </div>
                 <div class="footerFollowUs">
                     <p>Follow us</p>
@@ -266,17 +266,17 @@
                 <div class="footerInput">
                     <p>Join our mailing list</p>
 
-                    <p>Be the first to hear everything about ROOM.</p>
+                    <p class="footerInputText1">Be the first to hear everything about ROOM.</p>
 
                     <form action="send.php">
-                        <input type="tel">
+                        <input class="input1" type="tel">
                         <div class="checkboxMenu">
                             <input type="checkbox">
-                            <p> Yes. I would like to receive marketing communications from ROOM about product updates
-                                and special offers. Please refer to ROOM’s Privacy Policy for more information about how
-                                we process your data (including how to unsubscribe). </p>
+                            <p> YES. I WOULD LIKE TO RECEIVE MARKETING COMMUNICATIONS FROM ROOM ABOUT PRODUCT UPDATES
+                                AND SPECIAL OFFERS. PLEASE REFER TO ROOM’S PRIVACY POLICY FOR MORE INFORMATION ABOUT HOW
+                                WE PROCESS YOUR DATA (INCLUDING HOW TO UNSUBSCRIBE). </p>
                         </div>
-                        <a href="">Sign Up</a>
+                        <a href="">SIGN UP</a>
                     </form>
                 </div>
                 <div class="return">
