--- a/index.html
+++ b/index.html
@@ -13,11 +13,19 @@
         href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&family=Roboto:wght@300;400;500;700;900&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/1fb243072c.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/base.css">
+    <link rel="stylesheet" href="/footer.css">
+    <link rel="stylesheet" href="/nav.css">
+
+
+
+
+
 </head>
 
 <body>
     <div class="container">
-        <nav>
+        <nav id="nav">
             <div class="topNav">
                 <div class="topNavBlock">
                     <div class="TopNavInfo">
@@ -280,7 +288,7 @@
                     </form>
                 </div>
                 <div class="return">
-                    <a href="">Return to the top</a>
+                    <a id="returnTop" href="#nav">RETURN TO THE TOP</a>
                 </div>
             </div>
         </footer>
@@ -294,6 +302,7 @@
 
 
     </div>
+    <script src="/main.js"></script>
 </body>
 
 </html>
