--- a/index.html
+++ b/index.html
@@ -25,6 +25,39 @@
 
 <body>
     <div class="container">
+
+        <div class="adaptiveNavigation">
+            <div class="burger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </div>
+
+        <div class="burgerBlock">
+            <div class="burgerLogo">
+                <a href=""><img src="/img/Frame (10).png" alt=""></a>
+            </div>
+            <div class="mainNavLinks">
+                <a href="">PRODUCTS</a>
+                <a href="">EXPLORE</a>
+                <a href="">SHOP</a>
+            </div>
+            <div class="adaptiveBasket">
+                <a href=""><i class="fa-solid fa-basket-shopping"></i></i>basket</a>
+            </div>
+            <div class="TopNavInfo">
+                <p>CONTACT SALES</p>
+                <a href="tel:+7777777777">TEL 646-791-3726</a>
+                <div>EN</div>
+            </div>
+        </div>
+
+
+
+
+
+
         <nav id="nav">
             <div class="topNav">
                 <div class="topNavBlock">
@@ -37,7 +70,7 @@
             </div>
 
             <div class="mainNav">
-                <img src="/img/Frame (10).png" alt="">
+                <a href=""><img src="/img/Frame (10).png" alt=""></a>
                 <div class="mainNavLinks">
                     <a href="">PRODUCTS</a>
                     <a href="">EXPLORE</a>
@@ -47,18 +80,20 @@
             </div>
         </nav>
 
-        <main>
+        <main id="main">
             <img src="/img/111111 1.png" alt="">
-            <div class="mainText">
-                <h1>Design that inspires a better way to work.</h1>
-                <p>We've developed a series of purpose-built rooms that offer companies looking for change an
-                    affordable, sustainable, and flexible alternative to fixed construction and traditional office
-                    design.</p>
+            <div class="element-animation">
+                <div class="mainText">
+                    <h1>Design that inspires a better way to work.</h1>
+                    <p>We've developed a series of purpose-built rooms that offer companies looking for change an
+                        affordable, sustainable, and flexible alternative to fixed construction and traditional office
+                        design.</p>
+                </div>
             </div>
         </main>
 
         <section class="sectionOne">
-            <div class="sectionOneContent">
+            <div class="sectionOneContent element-animation">
                 <a href="">
                     <div class="sectionOneContentBlock">
                         <img src="/img/s1-1.png" alt="">
@@ -86,7 +121,7 @@
 
             </div>
 
-            <div class="sectionOneBrands">
+            <div class="sectionOneBrands element-animation">
                 <h1>The world's leading brands choose ROOM.</h1>
                 <h2>Over 3,000 and counting.</h2>
                 <div class="sectionOneBrandsBlock">
@@ -98,14 +133,17 @@
         <section class="sectionTwo">
             <div class="sectionTwoSlider"></div>
 
-            <div class="sectionTwoInfo">
+            <div class="sectionTwoInfo element-animation">
                 <h1>Our simple and seamless modular products allow teams to shape and then reshape their work
                     environment
                     with ease.</h1>
 
                 <a href="">GET IN TOUCH</a>
             </div>
-            <div class="sectionTwoText">
+
+
+            
+            <div class="sectionTwoText element-animation">
                 <div>
                     <h1>Cost-effective</h1>
                     <p>At a fraction of the cost of traditional construction, our pre-fab solutions create additional
@@ -125,7 +163,7 @@
                 </div>
             </div>
 
-            <div class="sectionTwoReview">
+            <div class="sectionTwoReview element-animation">
 
                 <div class="sectionTwoReviewBlock">
 
@@ -153,14 +191,14 @@
         </section>
 
         <section class="sectionThree">
-            <div class="sectionThreeText">
+            <div class="sectionThreeText element-animation">
                 <p>We take a human approach to a business-to-business industry, breaking the boundaries between
                     corporate and personal, and rethinking every step of the user experience along the way.</p>
 
                 <h2>We make work, work for you.</h2>
             </div>
             <div class="sectionThreeContent">
-                <div class="sectionThreeContentRow1">
+                <div class="sectionThreeContentRow1 element-animation">
                     <div class="sectionThreeContentBlock1">
                         <img src="/img/s3-1.png" alt="">
                     </div>
@@ -171,7 +209,7 @@
                     </div>
                 </div>
 
-                <div class="sectionThreeContentRow2">
+                <div class="sectionThreeContentRow2 element-animation">
                     <div class="sectionThreeContentBlock2">
                         <h1>We build with purpose.</h1>
                         <p>We’re not just building another room with four walls, we’re building a more productive
@@ -184,7 +222,7 @@
                     </div>
                 </div>
 
-                <div class="sectionThreeContentRow3">
+                <div class="sectionThreeContentRow3 element-animation">
                     <div class="sectionThreeContentBlock1">
                         <img src="/img/s3-3.png" alt="">
                     </div>
@@ -199,7 +237,7 @@
 
         </section>
 
-        <section class="sectionFour">
+        <section class="sectionFour element-animation">
             <div class="slider"></div>
 
             <div class="shipingInfo">
@@ -211,7 +249,7 @@
         </section>
 
         <footer>
-            <div class="footerBlock">
+            <div class="footerBlock element-animation">
 
                 <div class="footerLogo">
                     <a href=""><img src="/img/room.svg" alt=""></a>
@@ -288,7 +326,7 @@
                     </form>
                 </div>
                 <div class="return">
-                    <a id="returnTop" href="#nav">RETURN TO THE TOP</a>
+                    <a id="returnTop" href="#main">RETURN TO THE TOP</a>
                 </div>
             </div>
         </footer>
